--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@
 #spring.datasource.password=root
 #spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto= update
-spring.jpa.properties.hibernate.dialect= org.postgresql.Driver
+spring.datasource.driver-class-name= org.postgresql.Driver
