--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@
 #spring.datasource.username=root
 #spring.datasource.password=root
 #spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto= update
-spring.datasource.driver-class-name= org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto= update
+#spring.datasource.driver-class-name= org.postgresql.Driver
