--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # MySQL Configuration
-#spring.datasource.url= jdbc:mysql://localhost:3306/employeemanager
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.jpa.show-sql=true
+#spring.datasource.url= jdbc:postgresql://dpg-cetse85a4990mifokicg-a.singapore-postgres.render.com:5432/empmgmtdb
+#spring.datasource.username=empmgmtdb_user
+#spring.datasource.password=gwi79FEVIvq8RWwhGRHou64wy9pnls1Q
+##spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto= update
-#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.driver-class-name= org.postgresql.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
