--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url= jdbc:postgresql://dpg-cetse85a4990mifokicg-a.singapore-po
 #spring.datasource.username=empmgmtdb_user
 #spring.datasource.password=gwi79FEVIvq8RWwhGRHou64wy9pnls1Q
 ##spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= update
 spring.datasource.driver-class-name= org.postgresql.Driver
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
