--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 # MySQL Configuration
-spring.datasource.url= jdbc:postgresql://dpg-cetse85a4990mifokicg-a.singapore-postgres.render.com:5432/empmgmtdb
+#spring.datasource.url= jdbc:postgresql://dpg-cetse85a4990mifokicg-a.singapore-postgres.render.com:5432/empmgmtdb
 #spring.datasource.username=empmgmtdb_user
 #spring.datasource.password=gwi79FEVIvq8RWwhGRHou64wy9pnls1Q
 ##spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto= update
-spring.datasource.driver-class-name= org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto= update
+#spring.datasource.driver-class-name= org.postgresql.Driver
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+spring.datasource.driver-class-name= org.postgresql.Driver
+spring.datasource.password= gwi79FEVIvq8RWwhGRHou64wy9pnls1Q
+spring.datasource.url= jdbc:postgresql://dpg-cetse85a4990mifokicg-a.singapore-postgres.render.com:5432/empmgmtdb
+spring.datasource.username= empmgmtdb_user
+spring.jpa.database-platform= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto= update
