--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.datasource.driver-class-name= org.postgresql.Driver
-spring.datasource.password= gwi79FEVIvq8RWwhGRHou64wy9pnls1Q
-spring.datasource.url= jdbc:postgresql://dpg-cetse85a4990mifokicg-a.singapore-postgres.render.com:5432/empmgmtdb
-spring.datasource.username= empmgmtdb_user
+spring.datasource.password= 1Vaibhav1@123
+spring.datasource.url= jdbc:postgresql://db.qlvfrslkuipctxccjxac.supabase.co:5432/postgres
+spring.datasource.username= postgres
 #spring.jpa.database-platform= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
